fix text align

--- a/decoration-css-decomposition/src/App.css
+++ b/decoration-css-decomposition/src/App.css
@@ -1,3 +1,7 @@
+.App {
+  text-align: center;
+}
+
 .App-logo {
   pointer-events: none;
 }
